force-app/main/default/objects/Installation_Order_Item_Adjustment__c/Installation_Order_Item_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Installation Order Item Adjustment</label>
    <nameField>
        <label>Installation Order Item Adjustment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>INSTALLATION ORGER ITEM ADJUSTMENT</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>