force-app/main/default/objects/Installation_Order_Item_Adjustment__c/fields/CampaignName__c.field-meta.xml
<CustomField>
    <fullName>CampaignName__c</fullName>
    <label>Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>