force-app/main/default/objects/Installation_Order_Item_Adjustment__c/fields/CouponName__c.field-meta.xml
<CustomField>
    <fullName>CouponName__c</fullName>
    <label>Coupon Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>