force-app/main/default/objects/Installation_Order_Item_Adjustment__c/fields/InstallationOrderLineItemId__c.field-meta.xml
<CustomField>
    <fullName>InstallationOrderLineItemId__c</fullName>
    <label>Installation Order Product</label>
    <referenceTo>Installation_Order_Product__c</referenceTo>
    <relationshipLabel>INSTALLATION ORGER ITEM ADJUSTMENT</relationshipLabel>
    <relationshipName>INSTALLATION_ORGER_ITEM_ADJUSTMENT</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>