force-app/main/default/objects/Installation_Order_Item_Adjustment__c/fields/PromotionName__c.field-meta.xml
<CustomField>
    <fullName>PromotionName__c</fullName>
    <label>Promotion Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>