force-app/main/default/objects/Installation_Order_Item_Adjustment__c/fields/TotalAmtWithTax__c.field-meta.xml
<CustomField>
    <fullName>TotalAmtWithTax__c</fullName>
    <label>Adjustment with Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>