force-app/main/default/objects/Installation_Order_Item_Adjustment__c/fields/TotalTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalTaxAmount__c</fullName>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>